# OpenRosWarehouse

./: .gitignore  CLAUDE.md  DEVELOPERS_MANUAL.md  Next_Pro_Implementation_TODO.md  README.md  Roboshop_Pro_Implementation_TODO.md  _Footer.md  build.sh  old_samples.csv  spin_calibration_samples.csv  spin_test.py  test.sh
.gitnexus/: meta.json
desktop_app/: README.md  main.js  package-lock.json  package.json  preload.js
desktop_app/renderer/: connect.css  connect.html  connect.js
docs/: shelf_docking_production_todo.md
scripts/: stream_camera_to_dev_camera.sh
src/map_editor/: COLCON_IGNORE  setup.py
src/map_editor/src/: dotted_map.py  map_editor_server.py
src/map_editor/web/static/css/: map_editor.css
src/map_editor/web/static/js/: map_editor.js
src/map_editor/web/templates/: map_editor.html
src/next2_shelf/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/next2_shelf/config/: lidar_best_compat.yaml  lidar_params.yaml  median_filter_example.yaml  shelf_simple_compat.yaml
src/next2_shelf/launch/: filter_launch.py  lidar_ros2_launch.py
src/next2_shelf/resource/: next2_shelf
src/next2_shelf/scripts/: __init__.py  lidar_ros2.py  shelf_docking_sm.py
src/next2_shelf/test/: test_commit_gate.py  test_shelf_docking.py
src/next2_shelf_simple/: package.xml  setup.cfg  setup.py
src/next2_shelf_simple/launch/: shelf_inserter_launch.py
src/next2_shelf_simple/next2_shelf_simple/: shelf_detector.py  shelf_docking.py  shelf_geometric_refiner.py  shelf_inserter.py
src/next_nav2_controller/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/next_nav2_controller/include/next_nav2_controller/: next_nav2_controller.hpp
src/next_nav2_controller/src/: next_nav2_controller.cpp
src/next_ros2ws_core/: package.xml  setup.py
src/next_ros2ws_core/scripts/: verify_db.py
src/next_ros2ws_core/src/: __init__.py  action_registry.py  control_mode_manager.py  db_manager.py  docking_contracts.py  docking_gate.py  docking_insertion_controller.py  docking_motion_gate.py  docking_supervisor.py  keepout_zone_publisher.py  map_dotted_truth.py  map_dotted_truth_worker.py  map_editor_manager.py  map_layer_manager.py  map_manager.py  mission_manager.py  mode_switcher.py  navigation_arbitrator.py  safety_controller.py  settings_manager.py  stack_manager.py  topic_catalog.py  zone_manager.py
src/next_ros2ws_core/test/: test_docking_gate.py  test_docking_insertion_controller.py  test_docking_motion_gate.py  test_docking_supervisor.py  test_safety_controller.py  test_topic_catalog.py  test_zone_manager_safety_toggle.py
src/next_ros2ws_interfaces/: CMakeLists.txt  package.xml
src/next_ros2ws_interfaces/action/: FollowPath.action
src/next_ros2ws_interfaces/msg/: Layout.msg  MotionIntentStatus.msg  Path.msg  Zone.msg
src/next_ros2ws_interfaces/srv/: AddMapLayerObject.srv  CancelNavigation.srv  ClearMapLayer.srv  DeleteMapLayerObject.srv  ExportEditorMap.srv  GetLayouts.srv  GetMapLayers.srv  GetMissionStatus.srv  GetPaths.srv  GetSequenceStatus.srv  GetUiMappings.srv  GetZones.srv  OverwriteEditorMap.srv  ReloadEditorMap.srv  RequestNavigation.srv  ResumeMission.srv  SaveCurrentMap.srv  SaveUiMappings.srv  SetMotionIntent.srv  StartSequence.srv
src/next_ros2ws_tools/: package.xml  setup.py
src/next_ros2ws_tools/config/: relocalization_params.yaml
src/next_ros2ws_tools/src/: auto_reloc.py  db_viewer.py  odom_tf_bridge.py  scan_deskewer.py  scan_merger.py  slam_scan_gate.py  tf_topic_relay.py
src/next_ros2ws_web/: package.xml  setup.py
src/next_ros2ws_web/src/: dotted_map.py  mode_ops.py  next_ops.py  ros_bridge.py  safety_ops.py  zone_ops.py  zone_web_ui.py
src/next_ros2ws_web/test/: test_next_ops.py  test_next_routes.py  test_profile_storage.py
src/next_ros2ws_web/web/static/: dev_recognition.css  dev_recognition.js
src/next_ros2ws_web/web/static/resources/: operator_access.yaml
src/next_ros2ws_web/web/templates/: access_portal.html  camera.html  dev_lock.html  device_config.html  index.html  map_editor.html  map_editor.html.bak  user.html
src/ui_ws/: .clang-format  .gitignore  .map_editor_stage.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml
src/ui_ws/config/: mapper_params_online_async.yaml  nav2_params.yaml  navigate_through_poses_simple.xml  navigate_to_pose_simple.xml  path_metadata.yaml  robot.yaml  twist_mux.yaml
src/ui_ws/config/robot_profiles/: newprofile.yaml  registry.yaml  robot-1.yaml  robot1.yaml  robot1_2.yaml  testprofile99.yaml  ugv-01.yaml
src/ui_ws/config/robot_profiles/artifacts/robot-1/v10/: compiled.urdf  validation.yaml
src/ui_ws/config/robot_profiles/artifacts/robot-1/v11/: compiled.urdf  validation.yaml
src/ui_ws/config/robot_profiles/artifacts/robot1/v15/: compiled.urdf
src/ui_ws/config/robot_profiles/artifacts/robot1/v27/: compiled.urdf
src/ui_ws/launch/: joystick.launch.py  launch_sim.launch.py  localization_launch.py  mode_switcher.launch.py  nav2_bringup_wrapper.launch.py  navigation.launch.py  online_async_launch.py  rsp.launch.py  safety_controller.launch.py  slam.launch.py  waypoints_follow.launch.py  zone_nav_ui.launch.py
src/ui_ws/maps/: Inside.data  NewMap1_dotted_overlay.json  NextFactory_dotted_overlay.json
src/ui_ws/scripts/: nav2_launch_wrapper.sh  sync_workspace_mirror.py  verify_my_bot_source.py
src/ui_ws/src/: COLCON_IGNORE  map_editor  next_nav2_controller  next_ros2ws_core  next_ros2ws_interfaces  next_ros2ws_tools  next_ros2ws_web
src/ui_ws/urdf/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/ui_ws/worlds/: small_warehouse.world
