<?xml version="1.0"?>
<package format="3">
  <name>next2_shelf_simple</name>
  <version>0.1.0</version>
  <description>Simple shelf insertion node — direct cmd_vel drive, no Nav2.</description>
  <maintainer email="prabalkhareofficial@gmail.com">Next Robotics</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
