<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_bringup</name>
  <version>1.0.0</version>
  <description>Bringup package for the Next UGV platform: launch files, Nav2 config,
    robot description (URDF/Xacro), maps, and operational scripts.</description>
  <maintainer email="prabalkhareofficial@gmail.com">Next Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime packages launched by this bringup package -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>next_ros2ws_core</exec_depend>
  <exec_depend>next_ros2ws_web</exec_depend>
  <exec_depend>next_ros2ws_interfaces</exec_depend>
  <exec_depend>next_ros2ws_tools</exec_depend>
  <exec_depend>next2_shelf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
